# SakuraE

./: .gitignore  CMakeLists.txt  README-zh_cn.md  README.md  main.cpp  test.sak  test.sak_tree  test.sakir
Compiler/CodeGen/: generator.cpp  generator.hpp
Compiler/Error/: error.hpp
Compiler/Frontend/: AST.hpp  ast.cpp  ast.h  astbase.hpp  astparser.hpp  grammar.txt  lexer.cpp  lexer.h  parser.cpp  parser.h  parser.hpp  parser_base.hpp
Compiler/IR/: IR.hpp  README-zh_cn.md  README.md  generator.cpp  generator.hpp  value.hpp
Compiler/IR/docs/: alloca-heap-zh_cn.md  alloca-heap.md  ins-naming.md  string-zh_cn.md  string.md
Compiler/IR/layer/: function.hpp
Compiler/IR/struct/: block.hpp  function.hpp  instruction.hpp  module.hpp  program.hpp  scope.hpp
Compiler/IR/type/: type.cpp  type.hpp  type_info.cpp  type_info.hpp
Compiler/IR/value/: array.hpp  constant.cpp  constant.hpp  type.cpp  type.hpp  value.hpp
Compiler/LLVMCodegen/: LLVMCodegenerator.cpp  LLVMCodegenerator.hpp
Compiler/LLVMCodegen/parts/: InstCodegen.cpp
Compiler/Utils/: Logger.hpp
Runtime/: gc.cpp  gc.h  print.cpp  print.h  raw_string.cpp  raw_string.h
Runtime/Basic/: alloc.cpp  alloc.h  raw_string.cpp
atrI/: atrI.hpp  commands.hpp  utils.hpp
cli/: skee.hpp
includes/: String.hpp
sakurae/: LICENSE  README.md
sakurae-tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.sak  tree-sitter.json
sakurae-tree-sitter/bindings/c/: tree-sitter-sakparser.pc.in
sakurae-tree-sitter/bindings/go/: binding.go  binding_test.go
sakurae-tree-sitter/bindings/node/: binding.cc  index.d.ts  index.js
sakurae-tree-sitter/bindings/python/tests/: test_binding.py
sakurae-tree-sitter/bindings/python/tree_sitter_sakparser/: __init__.py  binding.c
sakurae-tree-sitter/bindings/rust/: build.rs  lib.rs
sakurae-tree-sitter/bindings/swift/TreeSitterSakparser/: sakparser.h
sakurae-tree-sitter/bindings/swift/TreeSitterSakparserTests/: TreeSitterSakparserTests.swift
sakurae-tree-sitter/queries/: folds.scm  highlights.scm
sakurae-tree-sitter/src/: grammar.json  node-types.json  parser.c
sakurae-vsc/: CHANGELOG.md  README.md  package.json  sakurae-0.0.1.vsix  sakurae-0.0.2.vsix  sakurae-0.0.4.vsix  sakurae-0.0.7.vsix
sakurae-vsc/syntaxes/: sak.tmLanguage.json
sakurae-zed/: extension.toml
sakurae-zed/grammars/: sakurae.toml
sakurae-zed/queries/sakurae/: symbols.scm
sakurae/syntaxes/: sak.tmLanguage.json
test/: gc_array_root.sak  gc_call_temporary.sak  gc_forbid_array_interior_ref.sak  gc_forbid_string_interior_ref.sak  gc_function_return.sak  gc_nested_concat.sak  gc_param_root_after_alloc.sak  gc_pass_argument.sak  gc_reassign.sak  gc_scope.sak  test0.sak  test1.sak
tools/: clearlog.py  line.py
